# Ethereum-Trading-MCP-Server

./: .env.example  .gitignore  Cargo.toml  README.md  generate_test_key.ps1  requirements.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  python_mcp_client.py
src/: config.rs  lib.rs  main.rs  tests.rs
src/ethereum/: client.rs  mock.rs  mod.rs  uniswap.rs
src/mcp/: mod.rs  server.rs
src/tools/: get_balance.rs  get_token_price.rs  mod.rs  swap_tokens.rs  tests.rs
tests/: integration_tests.rs
