[package]
name = "ethereum-trading-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ethereum-trading-mcp-server"
path = "src/main.rs"

[lib]
name = "ethereum_trading_mcp_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
hex = "0.4"
async-trait = "0.1"
dotenv = "0.15"
rmcp = { version = "0.8.3", features = ["macros", "server","transport-io"] }
schemars = "1.0"

[dev-dependencies]
mockito = "1.2"
serial_test = "3.0"
